Adicionado blocos para teste da relação entrada/saída.
Blocos teste_general e teste_general_par2.

O teste_general_par2 possui tamanho da saída dependente de um parâmetro.

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -16,8 +16,9 @@
 # along with GNU Radio; see the file COPYING.  If not, write to
 # the Free Software Foundation, Inc., 51 Franklin Street,
 # Boston, MA 02110-1301, USA.
-
 install(FILES
     ITpp_nada.xml
-    ITpp_Hamming_Encoder.xml DESTINATION share/gnuradio/grc/blocks
+    ITpp_Hamming_Encoder.xml
+    ITpp_teste_general.xml
+    ITpp_teste_general_par2.xml DESTINATION share/gnuradio/grc/blocks
 )
