--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -24,10 +24,11 @@ include(GrPlatform) #define LIB_SUFFIX
 
 include_directories(${Boost_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIRS})
-
 list(APPEND ITpp_sources
     nada_impl.cc
     Hamming_Encoder_impl.cc
+    teste_general_impl.cc
+    teste_general_par2_impl.cc
 )
 
 set(ITpp_sources "${ITpp_sources}" PARENT_SCOPE)
@@ -58,10 +59,11 @@ GR_LIBRARY_FOO(gnuradio-ITpp RUNTIME_COMPONENT "ITpp_runtime" DEVEL_COMPONENT "I
 include(GrTest)
 
 include_directories(${CPPUNIT_INCLUDE_DIRS})
-
 list(APPEND test_ITpp_sources
     ${CMAKE_CURRENT_SOURCE_DIR}/test_ITpp.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/qa_ITpp.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/qa_teste_general_par2.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/qa_teste_general.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/qa_Hamming_Encoder.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/qa_nada.cc
 )
