--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -45,3 +45,4 @@ GR_ADD_TEST(qa_nada ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_nada.py)
 GR_ADD_TEST(qa_Hamming_Encoder ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_Hamming_Encoder.py)
 GR_ADD_TEST(qa_teste_general ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_teste_general.py)
 GR_ADD_TEST(qa_teste_general_par2 ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_teste_general_par2.py)
+GR_ADD_TEST(qa_teste_general_par3 ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_teste_general_par3.py)
