Adicionado Hamming Encoder com parâmetro "m".
Entrada é apenas de 0 ou 1 nesta versão.

Portanto, se m=3 temos que para 4 entradas teremos 7 saídas.

--- a/include/ITpp/CMakeLists.txt
+++ b/include/ITpp/CMakeLists.txt
@@ -26,5 +26,6 @@ install(FILES
     Hamming_Encoder.h
     teste_general.h
     teste_general_par2.h
-    teste_general_par3.h DESTINATION include/ITpp
+    teste_general_par3.h
+    Hamming_Encoder_par.h DESTINATION include/ITpp
 )
