--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -30,6 +30,7 @@ list(APPEND ITpp_sources
     teste_general_impl.cc
     teste_general_par2_impl.cc
     teste_general_par3_impl.cc
+    Hamming_Encoder_par_impl.cc
 )
 
 set(ITpp_sources "${ITpp_sources}" PARENT_SCOPE)
@@ -63,6 +64,7 @@ include_directories(${CPPUNIT_INCLUDE_DIRS})
 list(APPEND test_ITpp_sources
     ${CMAKE_CURRENT_SOURCE_DIR}/test_ITpp.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/qa_ITpp.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/qa_Hamming_Encoder_par.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/qa_teste_general_par3.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/qa_teste_general_par2.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/qa_teste_general.cc
