--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -21,5 +21,6 @@ install(FILES
     ITpp_Hamming_Encoder.xml
     ITpp_teste_general.xml
     ITpp_teste_general_par2.xml
-    ITpp_teste_general_par3.xml DESTINATION share/gnuradio/grc/blocks
+    ITpp_teste_general_par3.xml
+    ITpp_Hamming_Encoder_par.xml DESTINATION share/gnuradio/grc/blocks
 )
