--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -44,3 +44,5 @@ set(GR_TEST_PYTHON_DIRS ${CMAKE_BINARY_DIR}/swig)
 GR_ADD_TEST(qa_Hamming_Encoder_par ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_Hamming_Encoder_par.py)
 GR_ADD_TEST(qa_Hamming_Decoder_par ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_Hamming_Decoder_par.py)
 GR_ADD_TEST(qa_BSC_Byte ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_BSC_Byte.py)
+GR_ADD_TEST(qa_BCH_Encoder ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_BCH_Encoder.py)
+GR_ADD_TEST(qa_BCH_Decoder ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_BCH_Decoder.py)
