Add RS_Encoder (Bit I/O).

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -21,5 +21,6 @@ install(FILES
     ITpp_Hamming_Decoder_par.xml
     ITpp_BSC_Byte.xml
     ITpp_BCH_Encoder.xml
-    ITpp_BCH_Decoder.xml DESTINATION share/gnuradio/grc/blocks
+    ITpp_BCH_Decoder.xml
+    ITpp_RS_Encoder.xml DESTINATION share/gnuradio/grc/blocks
 )
