--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -29,7 +29,8 @@ list(APPEND ITpp_sources
     Hamming_Decoder_par_impl.cc
     BSC_Byte_impl.cc
     BCH_Encoder_impl.cc
-    BCH_Decoder_impl.cc )
+    BCH_Decoder_impl.cc
+    RS_Encoder_impl.cc )
 
 set(ITpp_sources "${ITpp_sources}" PARENT_SCOPE)
 if(NOT ITpp_sources)
