--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -46,3 +46,4 @@ GR_ADD_TEST(qa_Hamming_Decoder_par ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_D
 GR_ADD_TEST(qa_BSC_Byte ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_BSC_Byte.py)
 GR_ADD_TEST(qa_BCH_Encoder ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_BCH_Encoder.py)
 GR_ADD_TEST(qa_BCH_Decoder ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_BCH_Decoder.py)
+GR_ADD_TEST(qa_RS_Encoder ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_RS_Encoder.py)
