--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -30,7 +30,8 @@ list(APPEND ITpp_sources
     BSC_Byte_impl.cc
     BCH_Encoder_impl.cc
     BCH_Decoder_impl.cc
-    RS_Encoder_impl.cc )
+    RS_Encoder_impl.cc
+    RS_Decoder_impl.cc )
 
 set(ITpp_sources "${ITpp_sources}" PARENT_SCOPE)
 if(NOT ITpp_sources)
