Preamble Sync PenguinSimu.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ notas.txt
 
 **/top_block.py
 !examples/Scripts Python/Scripts/*/top_block.py
+examples/Simulação BPSK/Transmissão Pinguim PrembleSync/*.bmp
 
 
 
